<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:text="@string/logScreen"/>
    
    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView1"
      android:layout_marginTop="50dp"
      android:text="@string/loginHint"/>
    
    
    <EditText
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     	android:layout_alignBottom="@+id/textView2"
      	android:layout_marginLeft="32dp"
      	android:layout_toRightOf="@+id/textView2"
        android:hint="@string/loginHint"
        android:ems="10" >

        <requestFocus />
    </EditText>

     <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView2"
      android:layout_below="@+id/textView2"
      android:layout_marginTop="38dp"
      android:text="@string/passwordHint" />
    
     
    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:layout_alignBottom="@+id/textView3"
      	android:layout_alignLeft="@+id/loginTxt"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTxt"
        android:layout_below="@+id/passwordTxt"
        android:layout_marginTop="34dp"
        android:text="@string/CheckBox" />
    
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:layout_below="@+id/passwordTxt"
        android:onClick="onClickLogin"
      	android:layout_centerHorizontal="true"
     	android:layout_marginTop="94dp"
        android:text="@string/login" />

    
    
</RelativeLayout>
